--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,29 @@
     <title>React App</title>
   </head>
   <body>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyBlB9IlntHNsueGtlWBcUUQysMzA3hMKwQ",
+        authDomain: "proyecto-feedback.firebaseapp.com",
+        projectId: "proyecto-feedback",
+        storageBucket: "proyecto-feedback.appspot.com",
+        messagingSenderId: "380978777676",
+        appId: "1:380978777676:web:588dd549e79fc5ad5aaee9",
+        measurementId: "G-VFRQX1XXQV"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="modal"></div>
